# libra

./: Cargo.toml
ol/zk/: Cargo.toml
ol/zk/fixtures/outputs/: hello-world.json  hello-world.lpk  hello-world.lvk  hello-world.out  hello-world.proof  hello-world.sum
ol/zk/src/: lib.rs  main.rs  other.rs  verify.rs
