[package]
name = "zlzk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leo-lang = "1.5.3"
leo-package = "1.5.3"
leo-compiler = "1.5.3"
snarkvm-algorithms = "0.7.9"
snarkvm-curves = "0.7.9"
anyhow = "1.0.56"